# graphics-template

./: .gitmodules  CMakeLists.txt  README.md  get_modules.sh
fluid/: CMakeLists.txt
fluid/include/: billboard.hpp  fluid-solver.hpp
fluid/src/: billboard.cpp  test_fluid.cpp
pipeline/: CMakeLists.txt
pipeline/include/: basic3D-pipeline.hpp  camera.hpp  exceptions.hpp  graphics-pipeline.hpp  input.hpp  shader.hpp
pipeline/src/: basic3D-pipeline.cpp  camera.cpp  exceptions.cpp  graphics-pipeline.cpp  input.cpp  pipeline-test.cpp  shader.cpp
test/: CMakeLists.txt  test_init.c
